# portable_so

./: CMakeLists.txt  generate.cmd
exe/: CMakeLists.txt  main.cpp
so/: CMakeLists.txt  so.cpp  so.h
